# maestro

./: .env.example  .envrc  .gitignore  .mise.toml  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  server.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
.agents/tools/: bump_version
.github/workflows/: ci.yml  release.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/output/server/: index.js  remote-entry.js
Casks/: maestro.rb
amp-executor/: package.json
amp-executor/src/: index.ts
docs/: README.md  analyses.md  analysis-example.md  architecture.md  change-tracking-stats.md  change-tracking.md  ci-integration.md  ci-tracking.md  components.md  diff-architecture.md  diff-stats.md  distribution.md  execution-event-bus.md  executions.md  gitlab-integration-readiness.md  ipc-guide.md  prompt-sets.md  reactivity.md  settings.md  sidecar-migration.md  sourcegraph-integration.md  ssh-authentication.md
homebrew/: README.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: amp-executor-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  types.rs
src-tauri/src/amp/: mod.rs  v2_client.rs
src-tauri/src/ci/: github_ci_provider.rs  github_provider.rs  gitlab_ci_provider.rs  mod.rs  provider.rs  status_checker.rs
src-tauri/src/commands/: amp_sidecar.rs  analysis.rs  analysis.rs.bak  app_check.rs  app_info.rs  ci.rs  db.rs  execution_poller.rs  executor.rs  executor.rs.bak  executor_events.rs  github.rs  health_check.rs  mod.rs  settings.rs  sourcegraph.rs  tokens.rs  worktree.rs
src-tauri/src/db/: migrations.rs  mod.rs  store.rs
src-tauri/src/git/: diff.rs  git_provider.rs  github_git_provider.rs  gitlab_git_provider.rs  mod.rs  service.rs
src-tauri/src/github/: client.rs.old  mod.rs
src-tauri/src/sourcegraph/: mod.rs
src-tauri/src/util/: git.rs  mod.rs  paths.rs
src/lib/: amp-executor.ts  api.ts  constants.ts  diff.ts  executor.ts  ipc.ts  logger.ts  maestroScanner.ts  polling.ts  tauri-api.ts  tokenStore.ts  types.ts  utils.ts
src/lib/actions/: intersect.ts
src/lib/components/: BranchesView.svelte  DiffViewer.svelte  FirstRunDialog.svelte  PromptDiff.svelte  PromptSidebar.svelte  ProviderIcon.svelte  Settings.svelte  (+1 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+102 files in other folders)
