[package]
name = "maestro"
version = "0.1.0"
description = "Maestro - AI Prompt Orchestrator"
authors = ["Sourcegraph"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["devtools"] }
tauri-plugin-log = "2"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
tokio = { version = "1", features = ["full"] }
octocrab = "0.41"
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = "0.19"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
lazy_static = "1.5"
which = "6.0"
tauri-plugin-notification = "2.3.1"
tauri-plugin-shell = "2.3.1"
